[gd_scene load_steps=7 format=3 uid="uid://bd7waua8am21s"]

[ext_resource type="Texture2D" uid="uid://dwptxt1mln5bg" path="res://Sprite/icon.svg" id="1_1pvtn"]
[ext_resource type="Script" path="res://Enemys/enemy_bat.gd" id="1_awfov"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qgdoy"]
atlas = ExtResource("1_1pvtn")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1glal"]
atlas = ExtResource("1_1pvtn")
region = Rect2(0, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_urgyd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgdoy")
}],
"loop": true,
"name": &"Fly",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1glal")
}],
"loop": true,
"name": &"Sleep",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0jubs"]
size = Vector2(12, 12)

[node name="Enemy_bat" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 8
wall_min_slide_angle = 0.0
script = ExtResource("1_awfov")

[node name="Bat Animations" type="AnimatedSprite2D" parent="."]
self_modulate = Color(1, 0.502265, 0.409968, 1)
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_urgyd")
animation = &"Death"
autoplay = "Sleep"

[node name="HitBox" type="CollisionShape2D" parent="." groups=["Enemy_Bat"]]
shape = SubResource("RectangleShape2D_0jubs")
debug_color = Color(0.999547, 0, 0.109503, 0.42)

[node name="VisionArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="VisionArea"]
scale = Vector2(0.666, 0.688)
polygon = PackedVector2Array(8, 0, 79.5796, 0, 73.5736, 11.6279, 67.5676, 23.2558, 58.5586, 34.8837, 46.5465, 43.6046, 31.5315, 52.3256, 16.5165, 58.1395, -1.5015, 62.5, -1, 6)

[node name="Chase_Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Direction_Timer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="body_entered" from="VisionArea" to="." method="_on_vision_area_body_entered"]
[connection signal="timeout" from="Chase_Timer" to="." method="_on_chase_timer_timeout"]
[connection signal="timeout" from="Direction_Timer" to="." method="_on_direction_timer_timeout"]
